deployments/apps/satisfactory/02-satisfactory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: satisfactory
  namespace: satisfactory
spec:
  selector:
    matchLabels:
      app: satisfactory
  template:
    metadata:
      labels:
        app: satisfactory
    spec:
      containers:
      - name: satisfactory
        image: wolveix/satisfactory-server:latest
        resources:
          limits:
            memory: "8G"
            cpu: "3000m"
          requests:
            memory: "1G"
            cpu: "500m"
        volumeMounts:
          - mountPath: /config
            name: satisfactory-data
        ports:
        - containerPort: 7777
          protocol: UDP
        - containerPort: 7777
          protocol: TCP
      volumes:
        - name: satisfactory-data
          persistentVolumeClaim:
            claimName: satisfactory-data
---
apiVersion: v1
kind: Service
metadata:
  name: satisfactory-svc
  namespace: satisfactory
spec:
  selector:
    app: satisfactory
  ports:
  - port: 7777
    protocol: TCP
    name: 'satisfactory'
    targetPort: 7777
  - port: 6666
    protocol: UDP
    name: 'satisfactory-udp'
    targetPort: 7777
