deployments/apps/satisfactory/01-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: satisfactory-ingress
  namespace: satisfactory
spec:
  entryPoints:
    - satisfactory
  routes:
  - match: HostSNI(`*`)
    services:
    - name: satisfactory-svc
      port: 7777
